--- a/static_files/css/main.css
+++ b/static_files/css/main.css
@@ -22,6 +22,11 @@ fieldset {
     margin: 5px 2px;
 }
 
+fieldset > div > input {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 main {
     width: 85%;
     height: 100%;
