Square display view area

--- a/static_files/css/main.css
+++ b/static_files/css/main.css
@@ -53,6 +53,10 @@ canvas {
     width: 100%;
 }
 
+#single_view_wrapper > canvas {
+    width: 100%;
+}
+
 footer {
     position: fixed;
     bottom: 0;
