--- a/static_files/css/reference.css
+++ b/static_files/css/reference.css
@@ -29,5 +29,18 @@ nav > fieldset > input {
 }
 
 #scan_view > section {
-    width: 50%;
+    width: 45%;
+}
+
+#colorbar-wrapper {
+    width: 5%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+#colorbar {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
 }
